--- a/model/mpd.html
+++ b/model/mpd.html
@@ -118,7 +118,7 @@
 <line x1="850" y1="450" x2="950" y2="500" style="stroke:black" comment="Node_has_tag to Tag link"/>
 <line x1="700" y1="450" x2="600" y2="320" style="stroke:black" comment="Node_has_tag to Node link"/>
 
-<g width="150" height="145" transform="translate(450,550)">
+<g width="150" height="145" transform="translate(450,900)">
 	<rect x="0" y="0" width="150" height="30" class="entity_header"/>
 	<rect x="0" y="30" width="150" height="110" class="entity"/>
 	<text x="5" y="20">service</text>
@@ -136,7 +136,20 @@
 </g>
 
 <line x1="850" y1="600" x2="950" y2="500" style="stroke:black" comment="Service_has_tag to Tag link"/>
-<line x1="700" y1="600" x2="600" y2="600" style="stroke:black" comment="Service_has_tag to Service link"/>
+<line x1="700" y1="600" x2="600" y2="1000" style="stroke:black" comment="Service_has_tag to Service link"/>
+
+<g width="180" height="145" transform="translate(450,700)">
+	<rect x="0" y="0" width="180" height="30" class="entity_header"/>
+	<rect x="0" y="30" width="180" height="110" class="entity"/>
+	<text x="5" y="20">instance</text>
+	<text x="5" y="50" class="primary_key">id (PK)</text>
+	<text x="5" y="70">name</text>
+	<text x="5" y="90" class="foreign_key">service_id (FK)</text>
+	<text x="5" y="110" class="foreign_key">environment_id (FK)</text>
+</g>
+
+<line x1="500" y1="840" x2="500" y2="900" style="stroke:black" comment="Instance to Service link"/>
+<line x1="300" y1="680" x2="450" y2="720" style="stroke:black" comment="Instance to Environment link"/>
 
 <g width="150" height="145" transform="translate(150,550)">
 	<rect x="0" y="0" width="150" height="30" class="entity_header"/>
@@ -160,7 +173,7 @@
 <line x1="250" y1="480" x2="200" y2="550" style="stroke:black" comment="Service_uses_node to Environment link"/>
 <line x1="450" y1="480" x2="500" y2="550" style="stroke:black" comment="Service_uses_node to Environment link"/>
 
-<g width="150" height="145" transform="translate(150,750)">
+<g width="150" height="145" transform="translate(150,1300)">
 	<rect x="0" y="0" width="150" height="30" class="entity_header"/>
 	<rect x="0" y="30" width="150" height="110" class="entity"/>
 	<text x="5" y="20">process</text>
@@ -170,11 +183,11 @@
 	<text x="5" y="110" class="foreign_key">domain_id</text>
 </g>
 
-<line x1="100" y1="750" x2="150" y2="780" style="stroke:black" comment="Process to Domain link"/>
-<line x1="100" y1="750" x2="100" y2="320" style="stroke:black" comment="Process to Domain link"/>
+<line x1="100" y1="1350" x2="150" y2="1380" style="stroke:black" comment="Process to Domain link"/>
+<line x1="100" y1="1350" x2="100" y2="320" style="stroke:black" comment="Process to Domain link"/>
 <line x1="150" y1="300" x2="100" y2="320" style="stroke:black" comment="Process to Domain link"/>
 
-<g width="220" height="160" transform="translate(450,750)">
+<g width="220" height="160" transform="translate(450,1300)">
 	<rect x="0" y="0" width="220" height="30" class="entity_header"/>
 	<rect x="0" y="30" width="220" height="150" class="entity"/>
 	<text x="5" y="20">process_step</text>
@@ -187,12 +200,12 @@
 	<text x="5" y="170" class="foreign_key">sub_process_id (FK)</text>
 </g>
 
-<line x1="300" y1="800" x2="450" y2="800" style="stroke:black" comment="Process_step to Process link"/>
-<line x1="300" y1="850" x2="450" y2="850" style="stroke:black" comment="Process_step to Process link (sub-process-id)"/>
-<line x1="480" y1="750" x2="480" y2="690" style="stroke:black" comment="Process_step to Service link"/>
-<line x1="670" y1="820" x2="750" y2="820" style="stroke:black" comment="Process_step to Step_Type link"/>
+<line x1="300" y1="1380" x2="450" y2="1380" style="stroke:black" comment="Process_step to Process link"/>
+<line x1="300" y1="1330" x2="450" y2="1330" style="stroke:black" comment="Process_step to Process link (sub-process-id)"/>
+<line x1="480" y1="1300" x2="480" y2="1040" style="stroke:black" comment="Process_step to Service link"/>
+<line x1="670" y1="1380" x2="750" y2="1380" style="stroke:black" comment="Process_step to Step_Type link"/>
 
-<g width="160" height="105" transform="translate(750,750)">
+<g width="160" height="105" transform="translate(750,1300)">
 	<rect x="0" y="0" width="160" height="30" class="entity_header"/>
 	<rect x="0" y="30" width="160" height="70" class="entity"/>
 	<text x="5" y="20">step_type</text>
@@ -200,7 +213,7 @@
 	<text x="5" y="70">name</text>
 </g>
 
-<g width="160" height="105" transform="translate(450,1000)">
+<g width="160" height="105" transform="translate(450,1580)">
 	<rect x="0" y="0" width="160" height="30" class="entity_header"/>
 	<rect x="0" y="30" width="160" height="110" class="entity"/>
 	<text x="5" y="20">step_link</text>
@@ -211,7 +224,7 @@
 	<text x="5" y="130">data</text>
 </g>
 
-<line x1="450" y1="1000" x2="250" y2="890" style="stroke:black" comment="Step_link to Process link"/>
-<line x1="550" y1="1000" x2="550" y2="930" style="stroke:black" comment="Step_link to Process_step link (from)"/>
-<line x1="500" y1="1000" x2="500" y2="930" style="stroke:black" comment="Step_link to Process_step link (to)"/>
+<line x1="450" y1="1600" x2="250" y2="1445" style="stroke:black" comment="Step_link to Process link"/>
+<line x1="550" y1="1580" x2="550" y2="1480" style="stroke:black" comment="Step_link to Process_step link (from)"/>
+<line x1="500" y1="1580" x2="500" y2="1480" style="stroke:black" comment="Step_link to Process_step link (to)"/>
 </svg>
