ajout de contraintes

--- a/model/mpd.html
+++ b/model/mpd.html
@@ -125,7 +125,12 @@
 	<text x="5" y="50" class="primary_key">id (PK)</text>
 	<text x="5" y="70">code</text>
 	<text x="5" y="90">name</text>
+	<text x="5" y="110" class="foreign_key">domain_id (FK)</text>
 </g>
+
+<line x1="110" y1="950" x2="450" y2="950" style="stroke:black" comment="Service to Domain link"/>
+<line x1="110" y1="950" x2="110" y2="330" style="stroke:black" comment="Service to Domain link"/>
+<line x1="110" y1="330" x2="150" y2="310" style="stroke:black" comment="Service to Domain link"/>
 
 <g width="150" height="145" transform="translate(700,550)">
 	<rect x="0" y="0" width="150" height="30" class="entity_header"/>
