--- a/model/mpd.html
+++ b/model/mpd.html
@@ -254,4 +254,17 @@
 <line x1="450" y1="1600" x2="250" y2="1445" style="stroke:black" comment="Step_link to Process link"/>
 <line x1="550" y1="1580" x2="550" y2="1480" style="stroke:black" comment="Step_link to Process_step link (from)"/>
 <line x1="500" y1="1580" x2="500" y2="1480" style="stroke:black" comment="Step_link to Process_step link (to)"/>
+
+
+<g width="160" height="105" transform="translate(700,1100)">
+	<rect x="0" y="0" width="160" height="30" class="entity_header"/>
+	<rect x="0" y="30" width="160" height="70" class="entity"/>
+	<text x="5" y="20">actor</text>
+	<text x="5" y="50" class="primary_key">id (PK)</text>
+	<text x="5" y="70">name</text>
+	<text x="5" y="90" class="foreign_key">domain_id (FK)</text>
+</g>
+
+<line x1="650" y1="1300" x2="700" y2="1200" style="stroke:black" comment="Process_step to actor link"/>
+
 </svg>
