--- a/model/mpd.html
+++ b/model/mpd.html
@@ -267,4 +267,25 @@
 
 <line x1="650" y1="1300" x2="700" y2="1200" style="stroke:black" comment="Process_step to actor link"/>
 
+<g width="160" height="105" transform="translate(1200,700)">
+	<rect x="0" y="0" width="160" height="30" class="entity_header"/>
+	<rect x="0" y="30" width="160" height="70" class="entity"/>
+	<text x="5" y="20">device</text>
+	<text x="5" y="50" class="primary_key">id (PK)</text>
+	<text x="5" y="70">name</text>
+</g>
+
+<line x1="1100" y1="1000" x2="1200" y2="750" style="stroke:black" comment="Component to device link"/>
+
+<g width="160" height="105" transform="translate(1200,900)">
+	<rect x="0" y="0" width="160" height="30" class="entity_header"/>
+	<rect x="0" y="30" width="160" height="70" class="entity"/>
+	<text x="5" y="20">data</text>
+	<text x="5" y="50" class="primary_key">id (PK)</text>
+	<text x="5" y="70">name</text>
+</g>
+
+<line x1="1100" y1="1000" x2="1200" y2="950" style="stroke:black" comment="Component to data link"/>
+
+
 </svg>
